# api/models/expense.go
@@ -39,3 +39,14 @@ type ExpenseHistory struct {
 	Summary   string    `db:"summary" json:"summary"`
 	CreatedAt time.Time `db:"created_at" json:"created_at"`
 }
+
+type GroupActivity struct {
+	ID        int       `db:"id" json:"id"`
+	GroupID   int       `db:"group_id" json:"group_id"`
+	ExpenseID *int      `db:"expense_id" json:"expense_id"`
+	UserID    int       `db:"user_id" json:"user_id"`
+	UserName  string    `db:"user_name" json:"user_name"`
+	Action    string    `db:"action" json:"action"`
+	Summary   string    `db:"summary" json:"summary"`
+	CreatedAt time.Time `db:"created_at" json:"created_at"`
+}
